--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "react": "^0.14.3",
     "react-addons-linked-state-mixin": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-mixin": "^3.0.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "redux": "^3.0.4",
-    "redux-form": "^3.0.12",
+    "redux-form": "^3.1.7",
     "redux-logger": "^2.0.4",
     "redux-router": "^1.0.0-beta4",
     "redux-thunk": "^1.0.0"
